# eventreels

./: .gitignore  README.md
landing/: index.html
reelsmith/: README.md  pyproject.toml
reelsmith/src/reelsmith/: __init__.py  analyze.py  beats.py  captions.py  cli.py  crop.py  pipeline.py  render.py  select.py  template.py
reelsmith/tests/: test_beats.py  test_captions.py  test_crop.py  test_pipeline.py
web/: huey.db-shm  huey.db-wal  main.py  pyproject.toml  run.sh  thumbnailer.py
web/static/: 404.html  index.html  watch.html
web/tests/: test_web.py
