[project]
name = "reelsmith"
version = "0.1.0"
description = "EventReels core: raw event footage in, finished vertical highlight reel out."
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "mediapipe>=0.10.35",
    "opencv-python>=4.13.0.92",
]

[project.scripts]
reelsmith = "reelsmith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reelsmith"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
