[project]
name = "eventreels-web"
version = "0.1.0"
description = "EventReels web studio — upload footage, get a finished reel."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "librosa>=0.11.0",
    "faster-whisper>=1.2.1",
    "rq>=2.9.1",
    "redis>=8.0.0",
    "huey>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
